--- a/RNAbsensiRSUDSAMRAT/ios/RNAbsensiRSUDSAMRAT/Info.plist
+++ b/RNAbsensiRSUDSAMRAT/ios/RNAbsensiRSUDSAMRAT/Info.plist
@@ -26,6 +26,8 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
@@ -35,8 +37,16 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCalendarsUsageDescription</key>
+	<string>App wants to access calendar</string>
+	<key>NSCameraUsageDescription</key>
+	<string>App wants to access camera</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>App wants to access location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>App wants to access location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>App wants to access location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
