--- a/RNAbsensiRSUDSAMRAT/package.json
+++ b/RNAbsensiRSUDSAMRAT/package.json
@@ -25,17 +25,38 @@
     "react-native-gesture-handler": "^2.12.1",
     "react-native-heroicons": "^3.2.0",
     "react-native-maps": "^1.7.1",
-    "react-native-permissions": "^3.8.4",
+    "react-native-permissions": "^3.9.0",
     "react-native-reanimated": "^3.4.2",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.10.0",
-    "react-native-vision-camera": "^2.15.6",
+    "react-native-vision-camera": "^3.0.0",
     "rn-fetch-blob": "^0.12.0",
     "rn-swipe-button": "^1.3.8",
     "socket.io-client": "^4.7.2",
     "start": "^5.1.0"
   },
+  "reactNativePermissionsIOS": [
+    "AppTrackingTransparency",
+    "BluetoothPeripheral",
+    "Calendars",
+    "Camera",
+    "Contacts",
+    "FaceID",
+    "LocationAccuracy",
+    "LocationAlways",
+    "LocationWhenInUse",
+    "MediaLibrary",
+    "Microphone",
+    "Motion",
+    "Notifications",
+    "PhotoLibrary",
+    "PhotoLibraryAddOnly",
+    "Reminders",
+    "Siri",
+    "SpeechRecognition",
+    "StoreKit"
+  ],
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
