--- a/RNAbsensiRSUDSAMRAT/package.json
+++ b/RNAbsensiRSUDSAMRAT/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@bam.tech/react-native-image-resizer": "^3.0.7",
     "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.5.0",
+    "base-64": "^1.0.0",
     "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-hook-form": "^7.45.2",
