--- a/RNAbsensiRSUDSAMRAT/package.json
+++ b/RNAbsensiRSUDSAMRAT/package.json
@@ -28,6 +28,7 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-maps": "^1.7.1",
     "react-native-permissions": "^3.9.0",
+    "react-native-pie-chart": "^3.0.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
