--- a/RNAbsensiRSUDSAMRAT/package.json
+++ b/RNAbsensiRSUDSAMRAT/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@bam.tech/react-native-image-resizer": "^3.0.7",
     "@react-native-async-storage/async-storage": "^1.19.2",
+    "@react-native-community/netinfo": "^9.4.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.5.0",
     "base-64": "^1.0.0",
     "geolib": "^3.3.4",
+    "lottie-react-native": "^6.3.1",
     "react": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-native": "0.72.3",
@@ -30,6 +32,7 @@
     "react-native-permissions": "^3.9.0",
     "react-native-pie-chart": "^3.0.1",
     "react-native-reanimated": "^3.4.2",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.10.0",
