--- a/RNAbsensiRSUDSAMRAT/android/build.gradle
+++ b/RNAbsensiRSUDSAMRAT/android/build.gradle
@@ -1,4 +1,27 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+// buildscript {
+//     ext {
+//         buildToolsVersion = "33.0.0"
+//         minSdkVersion = 21
+//         compileSdkVersion = 33
+//         targetSdkVersion = 33
+//         kotlinVersion = '1.6.20'
+//         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
+//         ndkVersion = "23.1.7779620"
+//     }
+//     repositories {
+//         maven { url 'https://maven.google.com' }
+//         google()
+//         mavenCentral()
+//     }
+//     dependencies {
+//         classpath("com.android.tools.build:gradle")
+//         classpath("com.facebook.react:react-native-gradle-plugin")
+//     }
+// }
+
+// // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     ext {
@@ -11,6 +34,7 @@ buildscript {
         ndkVersion = "23.1.7779620"
     }
     repositories {
+        maven { url 'https://maven.google.com' }
         google()
         mavenCentral()
     }
@@ -19,3 +43,12 @@ buildscript {
         classpath("com.facebook.react:react-native-gradle-plugin")
     }
 }
+
+allprojects {
+    repositories {
+        maven { url 'https://maven.google.com' }
+        google()
+        mavenCentral()
+    }
+}
+
