--- a/RNAbsensiRSUDSAMRAT/android/gradle.properties
+++ b/RNAbsensiRSUDSAMRAT/android/gradle.properties
@@ -46,3 +46,10 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+org.gradle.daemon=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+android.useAndroidX=true
+android.enableJetifier=true
