--- a/RNAbsensiRSUDSAMRAT/package.json
+++ b/RNAbsensiRSUDSAMRAT/package.json
@@ -29,6 +29,7 @@
     "react-native-gesture-handler": "^2.12.1",
     "react-native-heroicons": "^3.2.0",
     "react-native-maps": "^1.7.1",
+    "react-native-notifications": "^5.1.0",
     "react-native-permissions": "^3.9.0",
     "react-native-pie-chart": "^3.0.1",
     "react-native-restart": "^0.0.27",
