--- a/reactabsensirsudsamratadmin/package.json
+++ b/reactabsensirsudsamratadmin/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
+    "react-native-html-to-pdf": "^0.12.0",
+    "react-native-pdf": "^6.7.5",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
